Added pdksh compatible version of nfsrb. Also modified configuration file example, because the array definition "commands" of pdksh and bash are incompatible.

--- a/share/doc/machine-name.conf.example
+++ b/share/doc/machine-name.conf.example
@@ -11,11 +11,8 @@ _downloadMirror="http://openbsd-mirror.domain.tld/path/to/openbsd/"
 _openBsdVersion="5.6"
 _openBsdPlatform="platform"
 
-_basePath="/export/openbsd/${_openBsdVersion}/${_openBsdPlatform}/${_hostname}"
+_basePath="/srn/nfs/openbsd/${_openBsdVersion}/${_openBsdPlatform}/${_hostname}"
 
-_additionalSetsToDownload=( base
-                            etc
-                            man )
+_additiona√lSetsToDownload="man"
 
 _kernelToUse="kernel"
-
