--- a/share/doc/machine-name.conf.example
+++ b/share/doc/machine-name.conf.example
@@ -11,7 +11,7 @@ _downloadMirror="http://openbsd-mirror.domain.tld/path/to/openbsd/"
 _openBsdVersion="5.6"
 _openBsdPlatform="platform"
 
-_basePath="/srn/nfs/openbsd/${_openBsdVersion}/${_openBsdPlatform}/${_hostname}"
+_basePath="/srv/nfs/openbsd/${_openBsdVersion}/${_openBsdPlatform}/${_hostname}"
 
 _additionalSetsToDownload="man"
 
